--- a/JobPortal/Features/ManageJobs/AddJob/AddJobsPage.razor
+++ b/JobPortal/Features/ManageJobs/AddJob/AddJobsPage.razor
@@ -1,6 +1,6 @@
 ﻿@page "/add-job"
 @inject IMediator Mediator
-@*@attribute [Authorize]*@
+@attribute [Authorize]
 
 <PageTitle>Add JobsPortal</PageTitle>
 
