--- a/JobPortal/Features/Layout/Header.razor
+++ b/JobPortal/Features/Layout/Header.razor
@@ -13,9 +13,11 @@
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
+                <AuthorizeView>
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="/employer">Employer</a>
                 </li>
+                </AuthorizeView>
                 <AuthorizeView>
                     <li class="nav-item">
                         <a class="nav-link" href="/add-job">Add Job</a>
