--- a/JobPortal/Features/Layout/Header.razor
+++ b/JobPortal/Features/Layout/Header.razor
@@ -1,13 +1,13 @@
 ﻿@using JobPortal.Features.Auth
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href ="/">
-         <div class="logo">Nxgen's</div>
-        </a>
+
+        <a class="navbar-brand" href ="/">Nxgen's</a>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class=" nav justify-content-end">
                 <li class="nav-item">
