--- a/JobPortal/Features/ManageJobs/DetailJob/DetailsJobPage.razor
+++ b/JobPortal/Features/ManageJobs/DetailJob/DetailsJobPage.razor
@@ -1,4 +1,5 @@
 ﻿@page "/detail/{JobsId:int}"
+@using JobPortal.Shared.Features.ManageJobs.DetailJob;
 @inject IMediator Mediator
 
 @if (_isLoading)
@@ -54,7 +55,7 @@ else
     {
         _isLoading = true;
 
-        var response = await Mediator.Send(new GetJobRequest(JobsId));
+        var response = await Mediator.Send(new DetailJobRequest(JobsId));
 
         if (response.Jobs is not null)
         {
