--- a/JobPortal/Features/Layout/Header.razor
+++ b/JobPortal/Features/Layout/Header.razor
@@ -1,6 +1,6 @@
 ﻿@using JobPortal.Features.Auth
 
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -14,11 +14,9 @@
                     <a class="nav-link active" aria-current="page" href="/">Home</a>
                 </li>
                 <AuthorizeView>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/employer">Employer</a>
-                </li>
-                </AuthorizeView>
-                <AuthorizeView>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/employer">Employer</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/add-job">Add Job</a>
                     </li>
@@ -46,3 +44,6 @@
             </form>        
         </div>
 </nav>
+@code{
+    [Parameter, EditorRequired] public Jobs Job { get; set; } = default!;
+}
