--- a/JobPortal/Features/ManageJobs/EditJob/EditJobPage.razor
+++ b/JobPortal/Features/ManageJobs/EditJob/EditJobPage.razor
@@ -51,7 +51,7 @@ else
             _job.Location = response.Jobs.Location;
             _job.Image = response.Jobs.Image;
             _job.Salary = response.Jobs.Salary;
-            _job.CreatedDate = response.Jobs.CreatedDate;
+            _job.Date = response.Jobs.Date;
             _job.JobDescriptions.AddRange(response.Jobs.JobDescriptions.Select(ri => new JobsDto.JobDescription
                 {
                     Stage = ri.Stage,
@@ -91,8 +91,8 @@ else
             _job.Description = job.Description;
             _job.Location = job.Location;
             _job.Salary = job.Salary;
-            //_job.Released = job.Released;
-            _job.CreatedDate = job.CreatedDate;
+            _job.Time = job.Time;
+            _job.Date = job.Date;
             _job.JobDescriptions.Clear();
             _job.JobDescriptions.AddRange(job.JobDescriptions.Select(ri => new JobsDto.JobDescription
             {
