--- a/JobPortal/Features/ManageJobs/Employer/EmpoyerJobPage.razor
+++ b/JobPortal/Features/ManageJobs/Employer/EmpoyerJobPage.razor
@@ -22,7 +22,7 @@ else
     <div class="grid">
         @foreach (var job in _job)
         {
-            <JobCard Job="job" OnSelected="HandleJobSelected" />
+            <EmployerJobCard Job="job" OnSelected="HandleJobSelected" />
         }
     </div>
 }
