[add time and date}

--- a/JobPortal/Features/Home/JobCard.razor
+++ b/JobPortal/Features/Home/JobCard.razor
@@ -13,11 +13,11 @@
                 <p class="card-text">@Job.Description</p>
                <div>
                 <span class="oi oi-map-marker"> </span> @Job.Location &nbsp;
-                <i class="bi bi-calendar"> </i> @Job.Date.ToShortDateString() &nbsp;
                 <AuthorizeView>
                     <i class=" bi bi-cash"></i> @Job.Salary.ToString() &nbsp;
                 </AuthorizeView>
-                <i class="bi bi-clock"></i> @Job.Time.ToString("hh:mm") &nbsp;
+                <i class="bi bi-calendar"> </i> @Job.Time.ToString("dd/MM/yyyy") &nbsp;
+                <i class="bi bi-clock"></i> @Job.Time.ToString("hh:mm tt") &nbsp;
             </div>
             
             <div class="d-flex justify-content-between mb-3">
