--- a/JobPortal/Features/ManageJobs/Employer/EmployerPage.razor
+++ b/JobPortal/Features/ManageJobs/Employer/EmployerPage.razor
@@ -13,6 +13,12 @@
 }
 else
 {
+    @* <div>
+        @foreach (var job in _job)
+        {
+            <EmployerPage Job="job" OnSelected="HandleJobSelected" />
+        }
+    </div>*@
     <div class="grid">
         @foreach (var job in _job)
         {
@@ -43,7 +49,7 @@ else
                     Description = x.Description,
                     Location = x.Location,
                     Salary = x.Salary,
-                    Date = x.Date,
+                    Time =x.Time,
                     Owner = x.Owner
                 });
         }
